Add readme, remove appsettings.

--- a/InjectionDemo/appsettings.LocalDB.json
+++ b/InjectionDemo/appsettings.LocalDB.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InjectionDemo": "Server=localhost;Database=Injection;MultipleActiveResultSets=true;User=sa;Password=Password123!"
+    "InjectionDemo": "Server=(localdb)\\mssqllocaldb;Database=Injection;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
